# azure-openai-sample

./: Dockerfile  README.md  ai-plugin.json  docker-compose.yaml  open-ai.yaml  pyproject.toml
.devcontainer/: devcontainer.json
api/: fine-tuning.py  long_text.txt  main.py  shemas.py
